src/snapshots/afrotd__parser__tests__rule_9.3.4.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 9
  - 3
  - 4
title: "Halten und Benutzen von Händen oder Armen: Defense"
text: "\ta) Defense Spieler dürfen die Hände und Arme benutzen, um Offense Spieler wegzudrücken, zu ziehen, zu ergreifen oder anzuheben:\n\t\t1. wenn sie versuchen, an einen Runner zu gelangen.\n\t\t2. wenn die Offense Spieler offensichtlich versuchen, sie zu blocken.\n\tb) Ein Defense Spieler darf bei dem Versuch, einen freien Ball zu erreichen, seine Hand / Hände oder Arm / Arme legal benutzen, um einen Spieler wegzudrücken oder zu blocken (Regel 9.1.5 Ausnahmen 3 und 4 und Regel 9.3.5 Ausnahmen 3 und 5):\n\t\t1. während eines Rückpasses, eines Fumbles oder eines Kicks, bei dem er berechtigt ist, den Ball zu berühren.\n\t\t2. während eines Vorwärtspasses, der die neutrale Zone überquert und von einem Spieler oder einem Schiedsrichter berührt wurde.\n\tc) Wenn kein Versuch gemacht wird, an den Ball oder einen Runner zu gelangen, unterliegen Defense Spieler den Beschränkungen der Regeln 9.3.3.a und 9.3.3.b.\n\td) Defense Spieler dürfen die Hände und Arme nicht benutzen, um einen Gegner, ausgenommen einen Runner, zu tackeln, festzuhalten oder in sonstiger Weise illegal zu behindern.\n\te) Defense Spieler dürfen einen berechtigten Pass-Receiver abwehren oder legal blocken, bis sich dieser auf derselben Meterlinie wie der Defense Spieler befindet oder bis der Gegner ihn nicht mehr blocken kann. Fortwährender Kontakt ist illegal (A.R. 9.3.4.I). Strafe (c-e:): 10 Meter plus automatisch First Down, soweit das nicht in Konflikt zu anderen Regeln steht [S42]."
interpretations: []
