src/snapshots/afrotd__parser__tests__rule_9.4.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 9
  - 4
  - 2
title: Schlagen eines fliegenden Rückpasses
text: "Bei einem Rückpass darf der fliegende Ball nicht von einem Spieler des passenden Teams nach vorne geschlagen werden. Strafe: 10 Meter [S31]"
interpretations: []
