src/snapshots/afrotd__parser__tests__rule_9.4.3.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 9
  - 4
  - 3
title: Schlagen eines Balles in Besitz
text: "Ein Ball, der sich im Besitz eines Spielers befindet, darf von einem Spieler desselben Teams nicht nach vorne geschlagen werden. Strafe: 10 Meter [S31]"
interpretations: []
