src/snapshots/afrotd__parser__tests__rule_9.5.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 9
  - 5
  - 1
title: "Vor, während und nach dem Spiel"
text: "Personen, die den Regeln unterliegen, dürfen sich weder auf noch außerhalb des Feldes vor dem Spiel, während jeder Halbzeit, während der Halbzeitpause und nach dem Spiel an einer Schlägerei beteiligen (Regel 2.32.1). Strafe: 15 Meter vom Basic Spot oder vom Succeeding Spot, automatisch First Down für Team B-Fouls, soweit der First Down nicht im Widerspruch zu anderen Regeln steht, und Disqualifikation [S7, S27, S38 und S47]. Für Verstöße nach dem Spiel wird keine formelle Strafe durch die Schiedsrichter durchgeführt. Der Referee führt entsprechende Verstöße nach dem Spiel im Spielbericht auf. Regel 10 Durchführung von Strafen"
interpretations: []
