src/snapshots/afrotd__parser__tests__rule_html_1.1.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            1.1.1 Das Spiel
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Das Spiel muss zwischen zwei Teams mit jeweils nicht mehr
                als 11 Spielern auf einem rechteckigen Feld mit einem
                regelgerechten Ball ausgetragen werden.
                </li>
                <li>Ein Team darf legal mit weniger als 11 Spielern spielen. Es
                ereignet sich aber ein Foul, wenn die folgenden Auflagen nicht
                beachtet werden:
                    <ol type="1">
                        <li>Bei der Durchführung des Free Kicks befinden sich
                        wenigstens vier Team A-Spieler auf jeder Seite des
                        Kickers (Regel 6.1.2.c.3).
                        </li>
                        <li>Beim Snap befinden sich wenigstens fünf Spieler,
                        die Trikots mit einer Nummer von 50 bis 79 tragen, an
                        der Offense Scrimmage Line und nicht mehr als vier
                        Spieler befinden sich im Backfield (Regel 2.21.2,
                        2.27.4 und 7.1.4.a) (Ausnahme: Regel 7.1.4.a.5) (A.R.
                        7.1.4.IV bis 7.1.4.VI).
                        </li>
                    </ol>
                </li>
                <li>Ein Spiel kann nur dann ausgetragen werden, wenn die in der
                BSO Deutschland vorgeschriebenen Ausführungsbestimmungen
                erfüllt sind.
                </li>
                <li>Das Spiel ist das Geschehen zwischen dem ersten Kickoff und
                dem Zeitpunkt, wenn der Referee mit dem Signal S14 das Ende der
                letzten Spielperiode anzeigt. Dieser Zeitraum beinhaltet auch
                mögliche Extraperioden. Der Zeitraum vor dem Spiel wird als
                „vor Spielbeginn“ und der Zeitraum nach dem Spiel als „nach
                Spielende“ bezeichnet.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.1.1.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
