src/snapshots/afrotd__parser__tests__rule_html_1.1.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            1.1.2 Goallines
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Für jedes Team muss, an entgegengesetzten Enden des
                Spielfeldes, eine Goalline eingerichtet werden. Jedem Team muss
                die Möglichkeit gegeben werden, den Ball durch Laufen, Werfen
                oder Kicken über die Goalline des anderen Teams zu befördern.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.1.1.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
