src/snapshots/afrotd__parser__tests__rule_html_1.1.3.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            1.1.3 Sieger und Endergebnis
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Jedem Team müssen regelgerecht erzielte Punkte zuerkannt
                werden. Am Ende des Spieles hat das Team mit der höheren
                Punktzahl gewonnen, sofern das Spiel nicht abgebrochen wird.
                </li>
                <li>Wenn der Referee erklärt, dass das Spiel beendet ist, ist
                der Punktestand endgültig.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.1.1.3"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
