src/snapshots/afrotd__parser__tests__rule_html_1.1.5.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            1.1.5 Team Captains
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Jedes Team soll dem Referee nicht mehr als vier Teammitglieder
                als Team Captains benennen. Es soll jeweils nur ein Team
                Captain für sein Team in allen Belangen mit den Schiedsrichtern
                sprechen.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.1.1.5"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
